// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-tooltip> Component Advanced usage: adding tooltip to button 1`] = `
<bolt-tooltip uuid="12345">
  <button type="button"
          class="e-bolt-button"
  >
    Download
  </button>
  <span slot="content">
    File size: 25MB
  </span>
</bolt-tooltip>
`;

exports[`<bolt-tooltip> Component Basic usage 1`] = `
<bolt-tooltip uuid="12345">
  CRM
  <span slot="content">
    Customer relationship management
  </span>
</bolt-tooltip>
`;

exports[`<bolt-tooltip> Component Placement of the tooltip bubble: auto 1`] = `
<bolt-tooltip placement="auto"
              uuid="12345"
>
  CRM
  <span slot="content">
    Customer relationship management
  </span>
</bolt-tooltip>
`;

exports[`<bolt-tooltip> Component Placement of the tooltip bubble: bottom 1`] = `
<bolt-tooltip placement="bottom"
              uuid="12345"
>
  CRM
  <span slot="content">
    Customer relationship management
  </span>
</bolt-tooltip>
`;

exports[`<bolt-tooltip> Component Placement of the tooltip bubble: bottom-end 1`] = `
<bolt-tooltip placement="bottom-end"
              uuid="12345"
>
  CRM
  <span slot="content">
    Customer relationship management
  </span>
</bolt-tooltip>
`;

exports[`<bolt-tooltip> Component Placement of the tooltip bubble: bottom-start 1`] = `
<bolt-tooltip placement="bottom-start"
              uuid="12345"
>
  CRM
  <span slot="content">
    Customer relationship management
  </span>
</bolt-tooltip>
`;

exports[`<bolt-tooltip> Component Placement of the tooltip bubble: left 1`] = `
<bolt-tooltip placement="left"
              uuid="12345"
>
  CRM
  <span slot="content">
    Customer relationship management
  </span>
</bolt-tooltip>
`;

exports[`<bolt-tooltip> Component Placement of the tooltip bubble: left-end 1`] = `
<bolt-tooltip placement="left-end"
              uuid="12345"
>
  CRM
  <span slot="content">
    Customer relationship management
  </span>
</bolt-tooltip>
`;

exports[`<bolt-tooltip> Component Placement of the tooltip bubble: left-start 1`] = `
<bolt-tooltip placement="left-start"
              uuid="12345"
>
  CRM
  <span slot="content">
    Customer relationship management
  </span>
</bolt-tooltip>
`;

exports[`<bolt-tooltip> Component Placement of the tooltip bubble: right 1`] = `
<bolt-tooltip placement="right"
              uuid="12345"
>
  CRM
  <span slot="content">
    Customer relationship management
  </span>
</bolt-tooltip>
`;

exports[`<bolt-tooltip> Component Placement of the tooltip bubble: right-end 1`] = `
<bolt-tooltip placement="right-end"
              uuid="12345"
>
  CRM
  <span slot="content">
    Customer relationship management
  </span>
</bolt-tooltip>
`;

exports[`<bolt-tooltip> Component Placement of the tooltip bubble: right-start 1`] = `
<bolt-tooltip placement="right-start"
              uuid="12345"
>
  CRM
  <span slot="content">
    Customer relationship management
  </span>
</bolt-tooltip>
`;

exports[`<bolt-tooltip> Component Placement of the tooltip bubble: top 1`] = `
<bolt-tooltip placement="top"
              uuid="12345"
>
  CRM
  <span slot="content">
    Customer relationship management
  </span>
</bolt-tooltip>
`;

exports[`<bolt-tooltip> Component Placement of the tooltip bubble: top-end 1`] = `
<bolt-tooltip placement="top-end"
              uuid="12345"
>
  CRM
  <span slot="content">
    Customer relationship management
  </span>
</bolt-tooltip>
`;

exports[`<bolt-tooltip> Component Placement of the tooltip bubble: top-start 1`] = `
<bolt-tooltip placement="top-start"
              uuid="12345"
>
  CRM
  <span slot="content">
    Customer relationship management
  </span>
</bolt-tooltip>
`;

exports[`<bolt-tooltip> Component UUID of the tooltip 1`] = `
<bolt-tooltip uuid="custom-unique-id">
  CRM
  <span slot="content">
    Customer relationship management
  </span>
</bolt-tooltip>
`;
